app/assets/stylesheets/components/_card.scss
.card {
  margin-bottom: 2em;
  border-radius: 15px;
  box-shadow: 5px 5px 20px 5px rgba(143,143,143,0.5);
}

.card-img-top {
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  width: 100%;
  height: 15vw;
  object-fit: cover;
}

.card-img-top-new {
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  width: 100%;
  // height: 15vw;
  object-fit: cover;
}

.card-img {
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
  height: 100%;
  object-fit: cover;
}

.cocktail-details {
  display: flex;
  // flex-wrap: wrap;
  justify-content: space-around;
}

.ingredients {
  width: 50%
}

.directions {
  width: 50%;
  margin-left: 30px;
}

ul {
  // list-style-type: none;
  padding: 0px 0px 0px 20px;
  // margin: 0px;
}

